--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "recoil": "^0.6.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.8",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
