--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,10 @@
 version: '3'
+services:
+  react:
+    container_name: client
+    image: maaaaaaaaad/emojmo-client:0.1
+    build: 
+      context: ./
+      dockerfile: Dockerfile.dev
+    ports:
+      - "80:3000"
